Fixed day spacing

--- a/styles/cal.module.scss
+++ b/styles/cal.module.scss
@@ -24,8 +24,7 @@ $calItemInner-color: #c9328f;
         .dayContainer {
             background-color: $calItem-color;
             height:90%;
-         
-            flex-basis: 13.5%
+            flex-basis: 13%
         }
 
     }
